--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -3,6 +3,8 @@ name: flow
 on: push
 
 jobs:
+  test:
+      runs-on: ubuntu-latest
   super-lint:
     name: Lint code base
     runs-on: ubuntu-latest
@@ -15,3 +17,18 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'  # Specify your Python version
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 4: Run pytest
+      - name: Run tests
+        run: |
+          pytest tests/
